# vscode-agents

./: .gitignore  .tdd_memory.md  README.md  main.py  pyproject.toml
.github/: testing.instructions.md
.github/agents/: TDD-green.agent.md  TDD-red.agent.md  TDD-refactor.agent.md  TDD-supervisor.agent.md
