[project]
name = "vscode-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

# pyproject.toml
[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, C90: McCabe complexity
select = ["E", "F", "C90"] 
extend-select = ["I"] # isort

[tool.ruff.lint.mccabe]
max-complexity = 10